@@ -20,7 +20,17 @@ schema = Schema((
         )
     ),
 
-    # TODO: add body text
+    # The summary field is called 'body' to be consistent with Advisory.
+    TextField(
+        name='body',
+        allowable_content_types=('text/plain', 'text/structured', 'text/html', 'application/msword',),
+        widget=RichWidget(
+            label='Summary',
+            label_msgid='minaraad_label_summary',
+            i18n_domain='minaraad',
+        ),
+        default_output_type='text/html'
+    ),
 
     DateTimeField(
         name='date',
